[gd_scene load_steps=2 format=3 uid="uid://bbvlira0ldvkd"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_o0fgn"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_o0fgn")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -180.0
offset_right = 233.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ActionList" type="ItemList" parent="PanelContainer/MarginContainer"]
layout_mode = 2
allow_search = false
item_count = 3
item_0/text = "Attack"
item_1/text = "Skill"
item_2/text = "Defend"

[node name="SkillsList" type="ItemList" parent="PanelContainer/MarginContainer"]
visible = false
layout_mode = 2
allow_search = false
item_count = 2
item_0/text = "Back to Actions"
item_1/text = "Wind Slash"

[node name="AttackList" type="ItemList" parent="PanelContainer/MarginContainer"]
visible = false
layout_mode = 2
allow_search = false
item_count = 3
item_0/text = "Back to Actions"
item_1/text = "Slash"
item_2/text = "Spin Attack"

[connection signal="item_clicked" from="PanelContainer/MarginContainer/ActionList" to="." method="_on_action_list_item_clicked"]
[connection signal="item_clicked" from="PanelContainer/MarginContainer/SkillsList" to="." method="_on_skills_list_item_clicked"]
[connection signal="item_clicked" from="PanelContainer/MarginContainer/AttackList" to="." method="_on_attack_list_item_clicked"]
